@@ -1,8 +1,0 @@
-[Desktop Entry]
-_Name=CD Properties
-_Comment=Configure handling of CD devices
-Icon=cd-capplet.png
-Exec=cd-capplet
-Terminal=0
-Type=Application
-Categories=Application;Settings;AdvancedSettings;
