@@ -1,8 +1,0 @@
-[Desktop Entry]
-_Name=Panel
-_Comment=Global panel properties
-Exec=gnome-panel-properties-capplet
-Icon=panel-capplet.png
-Terminal=0
-Type=Application
-DocPath=panel/globalpanelprefs.html
