@@ -1,7 +1,0 @@
-[Desktop Entry]
-_Name=Startup Programs
-_Comment=Configure which non-session aware programs are started up
-Exec=session-properties-capplet
-Icon=session-capplet.png
-Terminal=0
-Type=Application
