@@ -28,10 +28,7 @@ capplets/desktop-links/Sawfish/move-properties.desktop.in
 capplets/desktop-links/Sawfish/placement-properties.desktop.in
 capplets/desktop-links/Sawfish/sound-properties.desktop.in
 capplets/desktop-links/Sawfish/workspace-properties.desktop.in
-capplets/desktop-links/cd.desktop.in.in
 capplets/desktop-links/legacy-applications.desktop.in.in
-capplets/desktop-links/panel.desktop.in.in
-capplets/desktop-links/session.desktop.in.in
 capplets/file-types/category-names.h
 capplets/file-types/file-types-capplet.c
 capplets/file-types/file-types-capplet.desktop.in
@@ -52,12 +49,6 @@ capplets/keybindings/keybinding.desktop.in
 capplets/keyboard/gnome-keyboard-properties.c
 capplets/keyboard/gnome-keyboard-properties.glade
 capplets/keyboard/keyboard.desktop.in
-capplets/mime-type/edit-window.c
-capplets/mime-type/mime-data.c
-capplets/mime-type/mime-info.c
-capplets/mime-type/mime-type-capplet.c
-capplets/mime-type/mime-type.desktop.in.in
-capplets/mime-type/new-mime-window.c
 capplets/mouse/gnome-mouse-properties.c
 capplets/mouse/gnome-mouse-properties.glade
 capplets/mouse/mouse.desktop.in
@@ -76,19 +67,9 @@ capplets/ui-properties/behavior.desktop.in
 capplets/ui-properties/behavior.desktop.in.in
 capplets/ui-properties/gnome-ui-properties.c
 capplets/ui-properties/gnome-ui-properties.glade
-capplets/url-properties/url-properties.c
-capplets/url-properties/url-properties.desktop.in
-capplets/url-properties/url.desktop.in.in
 capplets/windows/gnome-window-properties.c
 capplets/windows/gnome-window-properties.glade
 capplets/windows/window-properties.desktop.in
-capplets/wm-properties/wm-desktops/Enlightenment.desktop.in.in
-capplets/wm-properties/wm-desktops/IceWM.desktop.in.in
-capplets/wm-properties/wm-desktops/Scwm.desktop.in.in
-capplets/wm-properties/wm-desktops/WindowMaker.desktop.in.in
-capplets/wm-properties/wm-desktops/twm.desktop.in.in
-capplets/wm-properties/wm-properties-capplet.c
-capplets/wm-properties/wm.desktop.in.in
 control-center/capplet-dir-view-list.c
 control-center/capplet-dir-view.c
 control-center/capplet-dir.c
