@@ -3,9 +3,25 @@ archiver/config-archiver.c
 archiver/location.c
 archiver/main.c
 capplets/file-types/file-types-icon-entry.c
+capplets/mime-type/edit-window.c
+capplets/mime-type/mime-data.c
+capplets/mime-type/mime-info.c
+capplets/mime-type/mime-type-capplet.c
+capplets/mime-type/mime-type.desktop.in.in
+capplets/mime-type/new-mime-window.c
 capplets/rollback/main.c
 capplets/rollback/rollback-capplet-dialog.c
 capplets/rollback/rollback.desktop.in.in
-root-manager/root-manager.c
+capplets/url-properties/url-properties.c
+capplets/url-properties/url-properties.desktop.in
+capplets/url-properties/url.desktop.in.in
+capplets/wm-properties/wm-desktops/Enlightenment.desktop.in.in
+capplets/wm-properties/wm-desktops/IceWM.desktop.in.in
+capplets/wm-properties/wm-desktops/Scwm.desktop.in.in
+capplets/wm-properties/wm-desktops/WindowMaker.desktop.in.in
+capplets/wm-properties/wm-desktops/twm.desktop.in.in
+capplets/wm-properties/wm-properties-capplet.c
+capplets/wm-properties/wm.desktop.in.in
 root-manager/root-manager-helper.c
 root-manager/root-manager-wrap.c
+root-manager/root-manager.c
