@@ -1,3 +1,10 @@
+2002-06-05  Gediminas Paulauskas <menesis@delfi.lt>
+
+	* cd-capplet.png, cd.desktop.in.in,
+	panel-capplet.png, panel.desktop.in.in,
+	session-capplet.png, session.desktop.in.in:
+	remove unused desktop files and their icons from CVS.
+
 2002-05-01  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* Makefile.am: Fix to use the intltool rules from Christophe Fergeau
