@@ -1,3 +1,11 @@
+2002-06-05  Gediminas Paulauskas <menesis@delfi.lt>
+
+	* POTFILES.in: remove mime-type, url-properties and wm-properties
+	capplets -- they are not built nor distributed. Also remove
+	session, panel, and cd desktop files.
+	* POTFILES.skip: add those files here because those capplets are still
+	in CVS.
+
 2002-06-05  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Fixed Swedish translation.
