@@ -1,3 +1,8 @@
+2002-06-05  Gediminas Paulauskas <menesis@delfi.lt>
+
+	* background-properties.glade: radiobutton1 and similar things should
+	not be translatable.
+
 2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>
 
         * background-properties-capplet.c : Changed the help file link
